--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body,html{
 	line-height: 1.5;
 	margin: 0;
 	padding: 0;
-	background-image: url(../images/background.jpg);
+	background-image: url(../images/back3.jpg);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-attachment: fixed;
@@ -49,7 +49,10 @@ header h1{
 	width: 80%;
 	outline: none;
 	border: 1px solid #ddd;
-	padding: 12px 20px;
+	padding: 12px 20px 12px 40px;
+  	background-position: 10px 10px; 
+  	background-repeat: no-repeat;
+	background-image: url('../images/link.png');
 	transition:0.6s ease;
 	color: #444;
 }
@@ -95,6 +98,11 @@ header h1{
 	margin-bottom: 60px;
 }
 
+.pad-row-small{
+	padding-top: 8px;
+	padding-bottom: 8px;
+}
+
 @media screen and (max-width: 412px) {
 	.txtfind{
 		width: 100%;
@@ -108,7 +116,7 @@ header h1{
 		text-align: center;
 		margin: 4px;
 	}
-	header h1{
+	h1 span{
 		font-size: 28px;
 	}
 }
@@ -137,7 +145,51 @@ h1{
 }
 
 .panel{
-	padding: 20px;
+	padding: 15px;
 	background-color: #fff;
 }
 
+.img-ico{
+	vertical-align: middle;
+	padding-right: 4px;
+}
+
+.icon div{
+	display: inline-block;
+	width: 64px;
+	height: 64px;
+	margin: 4px 1px 4px 0;
+	opacity: .4;
+}
+
+.facebook{
+	background: url('../images/icons.png') 0 0;
+}
+.twitter{
+	background: url('../images/icons.png') 320px 0;
+}
+.youtube{
+	background: url('../images/icons.png') 256px 0;
+}
+.rss{
+	background: url('../images/icons.png') 192px 0;
+}
+.pinteres{
+	background: url('../images/icons.png') 128px 0;
+}
+.google{
+	background: url('../images/icons.png') 64px 0;
+}
+
+.facebook:hover,.twitter:hover,.youtube:hover,.rss:hover,.pinteres:hover,.google:hover{
+	border-radius:4px;	
+	opacity: 1;
+}
+
+.Social-bar{
+	border-top: 6px solid #478f00;
+	background-color: #fff;
+	padding: 16px;
+	margin-top: 13px;
+	margin-bottom: 13px;
+}
